fix link navbar

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -59,9 +59,11 @@
             <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
           </svg>
         </a>
-        <!-- a-Join -->
+        <!--a-Join -->
+
         <a class="link-join" href="#">
-          <p class="join-p">Join Now</p>
+          <span class="join-text">Join</span>
+          <span class="join-now-text">Join Now</span>
         </a>
       </div>
       <nav class="navbar-navigation marking">
