--- a/src/css/section-team.css
+++ b/src/css/section-team.css
@@ -96,7 +96,7 @@
       .subtitle {
         margin-bottom: 16px;
       }
-          .fjfgjg {
+          .container-team-general {
               padding: 40px 0;   }
 
 }
