Made layout for the hero section

--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -1,36 +1,38 @@
 <section class="hero">
+  <picture>
+    <source
+      media="(min-width: 1336px)"
+      srcset="
+        /img/img-for-desk/hero-desk.jpg    1x,
+        /img/img-for-desk/hero-desk@2x.jpg 2x
+      "
+    />
+    <source
+      media="(min-width: 768px)"
+      srcset="
+        /img/img-for-tabl/hero-tabl.jpg    1x,
+        /img/img-for-tabl/hero-tabl@2x.jpg 2x
+      "
+    />
+    <source
+      media="(max-width: 767px)"
+      srcset="/img/img-for-mob/hero.jpg 1x, /img/img-for-mob/hero@2x.jpg 2x"
+    />
+    <img
+      src="/img/img-for-desk/hero-desk.jpg"
+      alt="Yoga Pose at Sunset"
+      class="hero-image"
+      width="360"
+    />
+  </picture>
   <div class="container">
-    <picture>
-      <source
-        media="(min-width: 1336px)"
-        srcset="
-          img/img-for-desk/hero-desk.jpg   1x,
-          img/img-for-desk/hero-desk@2.jpg 2x
-        "
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="
-          img/img-for-tabl/hero-tabl.jpg   1x,
-          img/img-for-tabl/hero-tabl@2.jpg 2x
-        "
-      />
-      <source
-        media="(max-width: 374px)"
-        srcset="
-          img/img-for-mob/herol.jpg       1x,
-          img/img-for-mob/hero-hero@2.jpg 2x
-        "
-      />
-      <img
-        src="img/img-for-desk/hero-desk.jpg"
-        alt="Yoga Pose at Sunset"
-        class="hero-image"
-        width="375"
-      />
-    </picture>
     <div class="hero-content">
-      <h1 class="hero-title">Transform Your Life with Our Yoga Courses</h1>
+      <h1 class="hero-title">
+        <span class="break-1"> Transform Your Life</span>
+        <span class="break-2"> with Our Yoga </span>
+        <span class="word-mobile">Courses </span>
+        <span class="word-desktop">Clases </span>
+      </h1>
       <div class="hero-text-buttons">
         <p class="hero-description">
           Discover the harmony of mind and body through our expertly designed
@@ -38,7 +40,10 @@
           growth.
         </p>
         <div class="hero-buttons">
-          <a href="#pricing" class="button join">Join</a>
+          <a href="#pricing" class="button join-button">
+            <span class="mobile-text">Join</span>
+            <span class="desktop-text">Join Now</span>
+          </a>
           <a href="#gallery" class="button learn-more">Learn More</a>
         </div>
       </div>
