--- a/src/partials/section-popular-programs.html
+++ b/src/partials/section-popular-programs.html
@@ -62,7 +62,7 @@
         </div>
       </li>
     </ul>
-    <a href="#section-pricing-plan.html" class="programs-join-btn mobile-only button">Join</a>
-    <a href="#section-pricing-plan.html" class="programs-join-btn tablet-desktop button">Join now</a>
+    <a href="#pricing" class="programs-join-btn mobile-only button">Join</a>
+    <a href="#pricing" class="programs-join-btn tablet-desktop button">Join now</a>
   </div>
 </section>
