section is ready but without svg

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,36 +4,39 @@
       <nav class="header-navigation">
         <ul class="header-navigation-list">
           <li class="navigation-list-item">
-            <a class="navigation-item-link current" href="">Yoga Classes</a>
+            <a class="navigation-item-link current" href="#yoga-classes"
+              >Yoga Classes</a
+            >
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-item-link" href="">Team</a>
+            <a class="navigation-item-link" href="#team">Team</a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-item-link" href="">Testimonials</a>
+            <a class="navigation-item-link" href="#testimonials"
+              >Testimonials</a
+            >
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-item-link" href="">Prising</a>
+            <a class="navigation-item-link" href="#pricing">Prising</a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-item-link" href="">Contacts</a>
+            <a class="navigation-item-link" href="#contacts">Contacts</a>
           </li>
         </ul>
         <div class="header-mob">
           <!-- logo navbar -->
           <button type="button" class="navbar-button">
-            <svg class="navbar-svg" width="43" height="32">
+            <svg class="navbar-svg" width="16" height="12">
               <use href="/src/img/sprite.svg#icon-navbar"></use>
             </svg>
           </button>
           <!-- logo yogabloom -->
           <a class="logo-link" href="/src/index.html">
-            <svg class="logo-link-svg" width="108" height="32">
+            <svg class="logo-link-svg" width="83" height="23">
               <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
             </svg>
           </a>
           <!-- a-Join -->
-
           <a class="link-join" href="#">
             <span class="join-text">Join</span>
             <span class="join-now-text">Join Now</span>
@@ -48,31 +51,41 @@
     <div class="container navbar-menu-container">
       <div class="header-mob">
         <button type="button" class="navbar-close">
-          <svg class="navbar-close-svg" width="48" height="48">
+          <svg class="navbar-close-svg" width="12" height="12">
             <use href="/src/img/sprite.svg#icon-close"></use>
           </svg>
         </button>
 
         <!-- logo yogabloom -->
         <a class="logo-link" href="/src/index.html">
-          <svg class="logo-link-svg" width="108" height="32">
+          <svg class="logo-link-svg" width="83" height="23">
             <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
           </svg>
         </a>
         <!--a-Join -->
 
-        <a class="link-join" href="#">
+        <a class="link-join" href="">
           <span class="join-text">Join</span>
           <span class="join-now-text">Join Now</span>
         </a>
       </div>
       <nav class="navbar-navigation marking">
         <ul class="navbar-list">
-          <li class="navbar-item"><a href="navbar-link">Yoga Classes</a></li>
-          <li class="navbar-item"><a href="navbar-link">Team</a></li>
-          <li class="navbar-item"><a href="navbar-link">Testimonials</a></li>
-          <li class="navbar-item"><a href="navbar-link">Prising</a></li>
-          <li class="navbar-item"><a href="navbar-link">Contacts</a></li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="#yoga-classes">Yoga Classes</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="#team">Team</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="#testimonials">Testimonials</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="#pricing">Prising</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="#contacts">Contacts</a>
+          </li>
         </ul>
       </nav>
 
