--- a/src/css/header.css
+++ b/src/css/header.css
@@ -27,19 +27,24 @@
   justify-content: space-between;
   margin: 15px 0;
 }
-
+.navbar-button {
+  width: 24px;
+  height: 24px;
+  border: none;
+  background-color: transparent;
+}
 .navbar-svg {
   fill: #0d0b0a;
-  stroke: #0d0b0a;
 }
 
 /* logo yogabloom */
 .logo-link {
+  width: 84px;
+  height: 36px;
   display: flex;
 }
 .logo-link-svg {
-  stroke: black;
-  fill: #fff;
+  fill: #0d0b0a;
 }
 
 /* a-Join */
@@ -80,8 +85,12 @@
   padding: 0;
   width: 48px;
   height: 48px;
+  background-color: transparent;
+  border: none;
 }
-
+.navbar-close-svg {
+  fill: #000;
+}
 .marking {
   margin-top: 16px;
   margin-bottom: 276px;
