--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,13 +27,13 @@
           <!-- logo navbar -->
           <button type="button" class="navbar-button">
             <svg class="navbar-svg" width="16" height="12">
-              <use href="/src/img/sprite.svg#icon-navbar"></use>
+              <use href="../img/sprite.svg#icon-navbar"></use>
             </svg>
           </button>
           <!-- logo yogabloom -->
           <a class="logo-link" href="/src/index.html">
             <svg class="logo-link-svg" width="83" height="23">
-              <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
+              <use href="../img/sprite.svg#icon-yoga-bloom"></use>
             </svg>
           </a>
           <!-- a-Join -->
@@ -52,14 +52,14 @@
       <div class="header-mob">
         <button type="button" class="navbar-close">
           <svg class="navbar-close-svg" width="12" height="12">
-            <use href="/src/img/sprite.svg#icon-close"></use>
+            <use href="../img/sprite.svg#icon-close"></use>
           </svg>
         </button>
 
         <!-- logo yogabloom -->
         <a class="logo-link" href="/src/index.html">
           <svg class="logo-link-svg" width="83" height="23">
-            <use href="/src/img/sprite.svg#icon-yoga-bloom"></use>
+            <use href="../img/sprite.svg#icon-yoga-bloom"></use>
           </svg>
         </a>
         <!--a-Join -->
