--- a/src/css/header.css
+++ b/src/css/header.css
@@ -42,6 +42,8 @@
   width: 84px;
   height: 36px;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .logo-link-svg {
   fill: #0d0b0a;
