--- a/src/css/section-pricing-plan.css
+++ b/src/css/section-pricing-plan.css
@@ -1,4 +1,4 @@
-
+/* 
 /* Section Styling */
 
 .pricing-section {
@@ -40,8 +40,9 @@ margin-bottom: 48px;
   background: #fff;
   padding: 32px 24px;
   border-radius: 16px;
-  min-width: 340px;
+  min-width: 343px;
   max-width: 421px;
+  background: #dfebeb;
 }
 
 
@@ -54,12 +55,14 @@ margin-bottom: 48px;
   border-radius: 16px
 }
 
-/* Pricing Card */
+.additional-container-for-price {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
 
-
-
-
-.h3tit{font-family: "Cabin", sans-serif;
+.h3tit{
+font-family: "Cabin", sans-serif;
 font-weight: 400;
 margin-bottom: 8px;
 font-size: 18px;
@@ -68,11 +71,9 @@ letter-spacing: 0.01em;
 text-align: center;
 }
 
-.pricing-card h3 {
-  margin-bottom: 8px;
-}
 
-.price {font-family: "Cabin", sans-serif;
+.price {
+font-family: "Cabin", sans-serif;
 font-weight: 400;
 font-size: 44px;
 line-height: 120%;
@@ -82,23 +83,21 @@ color: #0d0b0a;
 margin-bottom: 24px;
 }
 
-.pricing-card ul {
-  list-style: none;
+.ulontwo {
   margin-bottom: 32px;
-  text-align: left;
+  text-align: start;
 }
 
-.liil{font-family: "Sarabun", sans-serif;
+.liil {
+font-family: "Sarabun", sans-serif;
 font-weight: 400;
 font-size: 16px;
 line-height: 160%;
+margin-bottom: 16px;
 }
 
-.pricing-card li {
-  margin-bottom: 16px;
-}
 
-button {font-family: "Sarabun", sans-serif;
+.butontwo {
 font-weight: 500;
 font-size: 16px; 
 line-height: 160%;
@@ -106,15 +105,10 @@ line-height: 160%;
 border: 1px solid #c2d9fc;
 border-radius: 100px;
 padding: 10px 24px;
-width: 295px;
+min-width: 100%;
 height: 46px;
 background: #c2d9fc;
 }
-
-.butontwo,
-.butonthre{margin-top: 32px;}
-
-
 
 
 /* Desktop Layout */
@@ -131,6 +125,11 @@ background: #c2d9fc;
     gap: 24px;
    }
 
+  .additional-container-for-price {
+    flex-direction: row;
+    gap: 24px; }
+
+
   .description {
     font-size: 18px;
     margin-bottom: 24px;
@@ -140,14 +139,10 @@ background: #c2d9fc;
     padding: 32px;
     flex: 1 1 calc(50% - 12px);
 }
+   .additional-style {
+    min-width: 100%;
 
-
- .pricing-card.wide {
-  flex: 1 1;
-  max-width: 704px;
-  /* занимает всю ширину */
 }
-
 }
 
 @media screen and (min-width: 1336px){
@@ -167,24 +162,12 @@ background: #c2d9fc;
     flex-wrap: nowrap;
   }
 
-  .pricing-card.wide {
-    width: 421px;
-  }
-}
-
-
-.ulontwo {
-  margin-bottom: 116px;
 }
 
 .ulthree {
   margin-bottom: 32px;
 }
 
-
-.butontwo {
-  margin-top: 116px;
-}
 
 .butonthre {
   margin-top: 32px;
@@ -223,4 +206,4 @@ background: #c2d9fc;
 .price {
   margin-bottom: 32px;
   font-size: 72px;
-}
+} 
