--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,51 +45,51 @@
       </nav>
     </div>
   </div>
-
-  <!-- navbar mobile menu -->
-  <div class="navbar-menu is-open">
-    <div class="container navbar-menu-container">
-      <div class="header-mob">
-        <button type="button" class="navbar-close">
-          <svg class="navbar-close-svg" width="12" height="12">
-            <use href="../img/sprite.svg#icon-close"></use>
-          </svg>
-        </button>
-
-        <!-- logo yogabloom -->
-        <a class="logo-link" href="/src/index.html">
-          <svg class="logo-link-svg" width="83" height="23">
-            <use href="../img/sprite.svg#icon-yoga-bloom"></use>
-          </svg>
-        </a>
-        <!--a-Join -->
-
-        <a class="link-join" href="">
-          <span class="join-text">Join</span>
-          <span class="join-now-text">Join Now</span>
-        </a>
-      </div>
-      <nav class="navbar-navigation marking">
-        <ul class="navbar-list">
-          <li class="navbar-item">
-            <a class="navbar-link" href="#yoga-classes">Yoga Classes</a>
-          </li>
-          <li class="navbar-item">
-            <a class="navbar-link" href="#team">Team</a>
-          </li>
-          <li class="navbar-item">
-            <a class="navbar-link" href="#testimonials">Testimonials</a>
-          </li>
-          <li class="navbar-item">
-            <a class="navbar-link" href="#pricing">Prising</a>
-          </li>
-          <li class="navbar-item">
-            <a class="navbar-link" href="#contacts">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <a class="navbar-link-join" href="">Join</a>
-    </div>
-  </div>
 </header>
+
+<!-- navbar mobile menu -->
+<div class="navbar-menu">
+  <div class="container navbar-menu-container">
+    <div class="header-mob">
+      <button type="button" class="navbar-close">
+        <svg class="navbar-close-svg" width="12" height="12">
+          <use href="../img/sprite.svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <!-- logo yogabloom -->
+      <a class="logo-link" href="/src/index.html">
+        <svg class="logo-link-svg" width="83" height="23">
+          <use href="../img/sprite.svg#icon-yoga-bloom"></use>
+        </svg>
+      </a>
+      <!--a-Join -->
+
+      <a class="link-join" href="">
+        <span class="join-text">Join</span>
+        <span class="join-now-text">Join Now</span>
+      </a>
+    </div>
+    <nav class="navbar-navigation marking">
+      <ul class="navbar-list">
+        <li class="navbar-item">
+          <a class="navbar-link" href="#yoga-classes">Yoga Classes</a>
+        </li>
+        <li class="navbar-item">
+          <a class="navbar-link" href="#team">Team</a>
+        </li>
+        <li class="navbar-item">
+          <a class="navbar-link" href="#testimonials">Testimonials</a>
+        </li>
+        <li class="navbar-item">
+          <a class="navbar-link" href="#pricing">Prising</a>
+        </li>
+        <li class="navbar-item">
+          <a class="navbar-link" href="#contacts">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+
+    <a class="navbar-link-join" href="">Join</a>
+  </div>
+</div>
