--- a/src/partials/section-breathe-space.html
+++ b/src/partials/section-breathe-space.html
@@ -35,7 +35,7 @@
             />
             <img
               src="/img/img-for-mob/section-four-img-1.png"
-              alt="Group yoga"
+              alt="Yoga group stretching with instructor in bright room"
             />
           </picture>
         </li>
@@ -68,7 +68,7 @@
             />
             <img
               src="/img/img-for-mob/section-four-img-2.png"
-              alt="Group yoga"
+              alt="Meditation session with people sitting cross-legged in calm atmosphere"
             />
           </picture>
         </li>
@@ -101,7 +101,7 @@
             />
             <img
               src="/img/img-for-mob/section-four-img-3.png"
-              alt="Group yoga"
+              alt="Peaceful yoga studio interior with mats and decor"
             />
           </picture>
         </li>
@@ -134,7 +134,7 @@
             />
             <img
               src="/img/img-for-mob/section-four-img-4.png"
-              alt="Group yoga"
+              alt="Sunlight entering empty yoga studio with mats on wooden floor"
             />
           </picture>
         </li>
@@ -167,7 +167,7 @@
             />
             <img
               src="/img/img-for-mob/section-four-img-5.png"
-              alt="Group yoga"
+              alt="Woman meditating in group yoga class with focused expression"
             />
           </picture>
         </li>
@@ -200,7 +200,7 @@
             />
             <img
               src="/img/img-for-mob/section-four-img-6.png"
-              alt="Group yoga"
+              alt="Serene meditation pose with group in background"
             />
           </picture>
         </li>
