--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,12 +7,10 @@ main {
   height: 64px;
   position: fixed;
     top: 0;
-    left: 0;
     width: 100%;
-    z-index: 999;
     background-color: #f1fafa;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-
+z-index: 999;
 }
 
 
@@ -83,6 +81,7 @@ main {
   position: fixed;
   top: 0;
   left: 0;
+  overflow-y: scroll;
   width: 100%;
   height: 100%;
   background-color: #f2fafa;
@@ -170,10 +169,17 @@ main {
 }
 
 @media (min-width: 1336px) {
+
+
   .header-container {
     max-height: 1440px;
     height: 72px;
   }
+    .header-container-add {
+  display: flex;
+   justify-content: space-between;
+    }
+
   .header-navigation-list {
     display: flex;
     gap: 32px;
