--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,7 +10,7 @@ main {
     width: 100%;
     background-color: #f1fafa;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-z-index: 999;
+   z-index: 999;
 }
 
 
@@ -81,17 +81,17 @@ z-index: 999;
   position: fixed;
   top: 0;
   left: 0;
-  overflow-y: scroll;
   width: 100%;
   height: 100%;
   background-color: #f2fafa;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(-100%);
+  transition: transform 800ms ease, opacity 300ms ease, visibility 300ms ease;
 }
 .navbar-menu.is-open {
+  transform: translateY(0);
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
