--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header-page">
+<header class="header-page hide-on-scroll">
   <div class="container header-container">
     <div class="header-container-add">
       <nav class="header-navigation">
