--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,8 +1,18 @@
 
-main {
-  padding-top: 64px;
 
+.hide-on-scroll {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: transform 0.3s ease;
+  z-index: 999;
 }
+
+.hide-on-scroll.hidden {
+  transform: translateY(-100%);
+}
+
 .header-page {
   height: 64px;
   position: fixed;
