fixed small bages

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,14 +24,14 @@
         <!-- logo navbar -->
         <button type="button" class="navbar-button" id="menuToggleBtn">
           <svg class="navbar-svg" width="16" height="12">
-            <use id="menuIcon" href="../img/sprite.svg#icon-navbar"></use>
+            <use id="menuIcon" href="./img/sprite.svg#icon-navbar"></use>
           </svg>
         </button>
 
         <!-- logo yogabloom -->
         <a class="logo-link" href="/src/index.html">
           <svg class="logo-link-svg" width="83" height="23">
-            <use href="../img/sprite.svg#icon-yoga-bloom"></use>
+            <use href="./img/sprite.svg#icon-yoga-bloom"></use>
           </svg>
         </a>
         <!-- a-Join -->
@@ -50,14 +50,14 @@
     <div class="header-mob">
       <button type="button" class="navbar-button" id="menuToggleBtn">
         <svg class="navbar-svg" width="16" height="12">
-          <use id="menuIcon" href="../img/sprite.svg#icon-navbar"></use>
+          <use id="menuIcon" href="./img/sprite.svg#icon-navbar"></use>
         </svg>
       </button>
 
       <!-- logo yogabloom -->
       <a class="logo-link" href="/src/index.html">
         <svg class="logo-link-svg" width="83" height="23">
-          <use href="../img/sprite.svg#icon-yoga-bloom"></use>
+          <use href="./img/sprite.svg#icon-yoga-bloom"></use>
         </svg>
       </a>
       <!--a-Join -->
