--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -18,10 +18,16 @@
   box-sizing: border-box;
   height: 42px;
   width: 100%;
-
-  border: 1px solid rgba(255, 255, 255, 0);
-  border-radius: 12px;
   background: rgba(13, 11, 10, 0.05);
+  border: none; /* Убираем рамку */
+  outline: none; /* Убираем обводку при фокусе */
+
+  border-radius: 12px;
+  transition: background-color 0.3s ease;
+}
+.input-footer:focus,
+.input-footer:hover {
+  background-color: #dfebeb;
 }
 .button-footer {
   display: block;
@@ -33,7 +39,8 @@
 
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 100px;
-  background: rgba(13, 11, 10, 0.05);
+
+  transition: background-color 0.3s ease;
 }
 .button-footer:hover {
   background: #dfebeb;
@@ -126,3 +133,6 @@
     width: 100%;
   }
 }
+/* svg {
+  border: 1px solid red;
+} */
