--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,11 +7,13 @@
 <link rel="stylesheet" href="../css/footer.css" />
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/base.css" />
-<footer class="footer">
+<footer class="footer" id="contacts">
   <div class="container">
     <div class="interior-div">
       <div class="div-total-information">
-        <h2 id="contacts">logo</h2>
+        <svg width="84" height="36" class="footer-logo">
+          <use href="../src/img/sprite.svg#icon-yoga-bloom" />
+        </svg>
         <p class="footer-paragraph">
           Subscribe to our newsletter for the latest updates on our yoga courses
           and events.
@@ -46,10 +48,38 @@
         <div class="div-item">
           <h3 class="header">Connect With Us</h3>
           <ul class="links-list">
-            <li><a href="https://www.facebook.com/">Facebook</a></li>
-            <li><a href="https://www.instagram.com/">Instagram</a></li>
-            <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
-            <li><a href="https://www.youtube.com/">YouTube</a></li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><svg width="20" height="20">
+                  <use href="../img/sprite.svg#icon-facebook" />
+                </svg>
+                Facebook</a
+              >
+            </li>
+            <li>
+              <a href="https://www.instagram.com/"
+                ><svg width="20" height="20">
+                  <use xlink:href="../img/sprite.svg#icon-instagram" />
+                </svg>
+                Instagram</a
+              >
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/"
+                ><svg width="20" height="20">
+                  <use href="../img/sprite.svg#icon-linkedin"></use>
+                </svg>
+                LinkedIn</a
+              >
+            </li>
+            <li>
+              <a href="https://www.youtube.com/"
+                ><svg width="20" height="20">
+                  <use href="../img/sprite.svg#icon-youtube"></use>
+                </svg>
+                YouTube</a
+              >
+            </li>
           </ul>
         </div>
       </div>
