--- a/src/css/section-team.css
+++ b/src/css/section-team.css
@@ -49,10 +49,36 @@
 .team-member-text {
     padding-top: 20px;
     text-align: center;
+    
 }
 
 .team-description {
     padding-top: 12px;
+}
+
+.social-links-list {
+    display: flex;
+    justify-content: center;
+    gap: 14px;
+    align-items: center;
+    list-style: none;
+}
+
+.social-links-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 24px;
+}
+
+.icon {
+    background-color: transparent;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    stroke-width: 0;
+    padding-bottom: 0;
+
 }
 
 
@@ -60,6 +86,9 @@
 /* Tablet: 768px */
 @media screen and (min-width: 768px) {
 
+    .img {
+        max-width: 100%;
+    }
     .team-list {
         display: flex;
         flex-direction: row;
@@ -73,7 +102,9 @@
         .paragraph-team {
             padding-bottom: 40px;   
         }
-
+        .team-description {
+            height: 78px;       
+        }
     .team-container {
         display: flex;
         align-items: center;
@@ -84,20 +115,26 @@
     }
     .team-member-text {
             padding-top: 24px;
+            margin-top: auto;
+            
     }
     .title {
             font-size: 52px;
         }
+
     .team-member {
         flex: calc((704px - 24px) / 2);
         height: 100%;
         max-width: 340px;
+        
     }
       .subtitle {
         margin-bottom: 16px;
       }
           .container-team-general {
-              padding: 40px 0;   }
+              padding: 40px 0;   
+            }
+
 
 }
 
