--- a/src/partials/section-team.html
+++ b/src/partials/section-team.html
@@ -54,10 +54,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./img/sprite.svg#icon-linkedin"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -68,10 +65,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="/img/sprite.svg#icon-instagram"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -121,10 +115,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./images/icons.svg#icon-linkedin"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -175,10 +166,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./img/sprite.svg#icon-instagram"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -229,10 +217,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./images/icons.svg#icon-linkedin"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -283,10 +268,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./img/sprite.svg#icon-facebook"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -297,10 +279,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./img/sprite.svg#icon-instagram"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
@@ -311,10 +290,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./images/icons.svg#icon-linkedin"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -365,10 +341,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./img/sprite.svg#icon-facebook"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
@@ -379,10 +352,7 @@
                     class="social-link"
                   >
                     <svg class="icon" width="24" height="24">
-                      <use
-                        class="team-icon"
-                        href="./img/sprite.svg#icon-instagram"
-                      ></use>
+                      <use href="../img/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
