--- a/src/partials/section-testimonials.html
+++ b/src/partials/section-testimonials.html
@@ -33,7 +33,7 @@
         <div class="testimonial-author">
           <img
             src="/img/avatar/avatar-2.png"
-            alt="photo Donna Norman"
+            alt="photo Sophie Delgado"
             width="56"
             height="56"
           />
@@ -52,7 +52,7 @@
         <div class="testimonial-author">
           <img
             src="/img/avatar/avatar-3.png"
-            alt="photo Donna Norman"
+            alt="photo Rachel Kimura"
             width="56"
             height="56"
           />
@@ -72,7 +72,7 @@
         <div class="testimonial-author">
           <img
             src="/img/avatar/avatar-4.png"
-            alt="photo Donna Norman"
+            alt="photo Emma L. Hart"
             width="56"
             height="56"
           />
