--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -48,43 +48,43 @@
         <div class="div-item">
           <h3 class="header">Connect With Us</h3>
           <ul class="links-list">
-            <li>
+            <li class="item-list-footer">
               <a href="https://www.facebook.com/">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="../img/sprite.svg#icon-facebook" />
                   </svg>
-                  <span>Facebook</span>
+                  <span class="span-footer">Facebook</span>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="item-list-footer">
               <a href="https://www.instagram.com/">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="../img/sprite.svg#icon-instagram" />
                   </svg>
-                  <span>Instagram</span>
+                  <span class="span-footer">Instagram</span>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="item-list-footer">
               <a href="https://www.linkedin.com/">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="../img/sprite.svg#icon-linkedin"></use>
                   </svg>
-                  <span>LinkedIn</span>
+                  <span class="span-footer">LinkedIn</span>
                 </div>
               </a>
             </li>
-            <li>
+            <li class="item-list-footer">
               <a href="https://www.youtube.com/">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="../img/sprite.svg#icon-youtube"></use>
                   </svg>
-                  <span> YouTube</span>
+                  <span class="span-footer"> YouTube</span>
                 </div>
               </a>
             </li>
