--- a/src/css/section-popular-programs.css
+++ b/src/css/section-popular-programs.css
@@ -109,6 +109,8 @@ body {
 .programs-section picture,
 .programs-section img {
   margin-bottom: 24px;
+  max-width: 100%;
+  height: auto;
 }
 @media only screen and (min-width: 768px) {
   .programs-section picture,
@@ -215,6 +217,11 @@ body {
   width: 341px;
   height: 44px;
   background: #d5e5fa;
+  transition: background-color 0.3s ease;
+}
+.programs-join-btn:hover,
+.programs-join-btn:focus {
+  background-color: #aea3f8;
 }
 @media only screen and (min-width: 768px) {
   .programs-join-btn {
