--- a/src/partials/section-popular-programs.html
+++ b/src/partials/section-popular-programs.html
@@ -14,12 +14,12 @@
             <source srcset="/img/img-for-mob/section-two-img-1.png 1x, /img/img-for-mob/section-two-img-1@2x.png 2x"
               media="(max-width: 767px)" type="image/png">
             <source
-              srcset="/img/img-for-tabl/section-two-img-1-tabl.png 1x, /img/img-for-tabl/section-two-img-1-tabl@2x.png 2x,"
-              media="(min-width: 768px)" type="image/png">
-            <source
-              srcset="/img/img-for-desk/section-two-img-one-desk.png 1x, /img/img-for-desk/section-two-img-1-desk@2x.png 2x,"
+              srcset="../img/img-for-desk/section-two-img-one-desk.png 1x, /img/img-for-desk/section-two-img-1-desk@2x.png 2x"
               media="(min-width: 1336px)" type="image/png">
-            <img src="/img/img-for-mob/section-two-img-1.png" alt="women are doing yoga" max-width="100%" height="auto">
+            <source
+              srcset="/img/img-for-tabl/section-two-img-1-tabl.png 1x, /img/img-for-tabl/section-two-img-1-tabl@2x.png 2x"
+              media="(min-width: 768px)" type="image/png">
+            <img src="/img/img-for-mob/section-two-img-1.png" alt="women are doing yoga">
           </picture>
           <h3 class="programs-name">Beginner
             Yoga: Foundations <span class="mobile-only"> for New Practitioners</span>
@@ -33,12 +33,12 @@
             <source srcset="/img/img-for-mob/section-two-img-2.png 1x, /img/img-for-mob/section-two-img-2@2x.png 2x"
               media="(max-width: 767px)" type="image/png">
             <source
-              srcset="/img/img-for-tabl/section-two-img-2-tabl.png 1x, /img/img-for-tabl/section-two-img-2-tabl@2x.png 2x"
-              media="(min-width: 768px)" type="image/png">
-            <source
               srcset="/img/img-for-desk/section-two-img-2-desk.png 1x, /img/img-for-desk/section-two-img-2-desk@2x.png 2x"
               media="(min-width: 1336px)" type="image/png">
-            <img src="/img/img-for-mob/section-two-img-2.png" alt="woman is doing yoga" max-width="100%" height="auto">
+            <source
+              srcset="/img/img-for-tabl/section-two-img-2-tabl.png 1x, /img/img-for-tabl/section-two-img-2-tabl@2x.png 2x"
+              media="(min-width: 768px)" type="image/png">
+            <img src="/img/img-for-mob/section-two-img-2.png" alt="woman is doing yoga">
           </picture>
           <h3 class="programs-name">Vinyasa Flow: Energize Your Body and Mind</h3>
           <p class="programs-description">Experience a dynamic sequence that connects breath and movement.</p>
@@ -50,12 +50,13 @@
             <source srcset="/img/img-for-mob/section-two-img-3.png 1x, /img/img-for-mob/section-two-img-3@2x.png 2x"
               media="(max-width: 767px)" type="image/png">
             <source
-              srcset="/img/img-for-tabl/section-two-img-3-tabl.png 1x, /img/img-for-tabl/section-two-img-3-tabl@2x.png 2x"
-              media="(min-width: 768px)" type="image/png">
-            <source
               srcset="/img/img-for-desk/section-two-img-3-desk.png 1x, /img/img-for-desk/section-two-img-3-desk@2x.png 2x"
               media="(min-width: 1336px)" type="image/png">
-            <img src="/img/img-for-mob/section-two-img-3.png" alt="human is meditating" max-width="100%" height="auto">
+            <source
+              srcset="/img/img-for-tabl/section-two-img-3-tabl.png 1x, /img/img-for-tabl/section-two-img-3-tabl@2x.png 2x"
+              media="(min-width: 768px)" type="image/png">
+
+            <img src="/img/img-for-mob/section-two-img-3.png" alt="human is meditating">
           </picture>
           <h3 class="programs-name">Restorative Yoga: Deep Relaxation and Healing</h3>
           <p class="programs-description">Unwind and rejuvenate with gentle poses and mindfulness.</p>
