--- a/src/css/section-pricing-plan.css
+++ b/src/css/section-pricing-plan.css
@@ -1,209 +1,228 @@
-/* 
-/* Section Styling */
-
 .pricing-section {
   padding: 64px 0;
   text-align: center;
 }
 
 .subheading {
-font-size: 16px;
-margin-bottom: 12px;
-font-family: "Sarabun", sans-serif;
-font-weight: 600;
-line-height: 150%;
-
+  font-size: 16px;
+  margin-bottom: 12px;
+  font-family: 'Sarabun', sans-serif;
+  font-weight: 600;
+  line-height: 1.5;
 }
 
-.heading{
-margin-bottom: 20px;
-font-family: "Cabin", sans-serif;
-font-weight: 400;
-font-size: 40px;
-line-height: 120%;
-letter-spacing: 0.01em;
-text-align: center;
-
+.heading {
+  margin-bottom: 20px;
+  font-family: 'Cabin', sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
 }
 
 .description {
-margin-bottom: 48px;
-font-family: "Sarabun", sans-serif;
-font-weight: 400;
-font-size: 16px;
-line-height: 160%;
-margin-bottom: 48px;
+  margin-bottom: 48px;
+  font-family: 'Sarabu', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
 }
 
-.pricing-card {
-  border: 0px solid rgba(13, 11, 10, 0.15);
-  background: #fff;
-  padding: 32px 24px;
-  border-radius: 16px;
-  min-width: 343px;
-  max-width: 421px;
-  background: #dfebeb;
-}
-
-
-/* Pricing Cards Container */
 .pricing-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 32px;
-  border: 0px solid rgba(13, 11, 10, 0.15);
-  border-radius: 16px
+  align-items: stretch;
 }
 
-.additional-container-for-price {
+.pricing-card {
+  background-color: #dfebeb;
+  border: 0px solid rgba(13, 11, 10, 0.15);
+  border-radius: 16px;
+  padding: 32px 24px;
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 24px;
+  max-width: 343px;
+  width: 100%;
+  min-height: 100%;
 }
 
-.h3tit{
-font-family: "Cabin", sans-serif;
-font-weight: 400;
-margin-bottom: 8px;
-font-size: 18px;
-line-height: 140%;
-letter-spacing: 0.01em;
-text-align: center;
+.card__title {
+  font-family: 'Cabin', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.4;
+  letter-spacing: 0.01em;
+  margin-bottom: 8px;
 }
 
-
-.price {
-font-family: "Cabin", sans-serif;
-font-weight: 400;
-font-size: 44px;
-line-height: 120%;
-letter-spacing: 0.01em;
-text-align: center;
-color: #0d0b0a;
-margin-bottom: 24px;
+.card__price {
+  font-family: 'Cabin', sans-serif;
+  font-weight: 400;
+  font-size: 44px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
 }
 
-.ulontwo {
-  margin-bottom: 32px;
-  text-align: start;
+.features-list {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 8px 0;
+  gap: 16px;
 }
 
-.liil {
-font-family: "Sarabun", sans-serif;
-font-weight: 400;
-font-size: 16px;
-line-height: 160%;
-margin-bottom: 16px;
+.card__button {
+  background-color: #c2d9fc;
+  border: 0px solid rgba(13, 11, 10, 0.15);
+  border-radius: 100px;
+  padding: 10px 24px;
+  text-align: center;
+  font-family: 'Sarabun', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  width: 100%;
+  margin-top: 32px;
 }
 
-
-.butontwo {
-font-weight: 500;
-font-size: 16px; 
-line-height: 160%;
-
-border: 1px solid #c2d9fc;
-border-radius: 100px;
-padding: 10px 24px;
-min-width: 100%;
-height: 46px;
-background: #c2d9fc;
+.card__button.tablet-only {
+  display: none;
 }
 
-
-/* Desktop Layout */
-@media screen and (min-width: 768px) {
-
+/* Планшетная версия */
+@media (min-width: 768px) and (max-width: 1335px) {
   .pricing-section {
-     padding: 40px 0;
+    padding: 40px 0;
+  }
+
+  .subheading {
+    margin-bottom: 16px;
+  }
+
+  .heading {
+    margin-bottom: 24px;
+  }
+
+  .description {
+    margin-bottom: 24px;
+    font-size: 18px;
   }
 
   .pricing-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    max-width: 704px;
     gap: 24px;
-   }
+  }
 
-  .additional-container-for-price {
-    flex-direction: row;
-    gap: 24px; }
-
-
-  .description {
-    font-size: 18px;
-    margin-bottom: 24px;
-}
-
-   .pricing-card {
-    padding: 32px;
+  .pricing-card {
     flex: 1 1 calc(50% - 12px);
-}
-   .additional-style {
-    min-width: 100%;
+    max-width: 340px;
+    padding: 16px;
+  }
 
-}
+  .card__title {
+    font-size: 22px;
+  }
+
+  .card__price {
+    font-size: 72px;
+  }
+
+  .features-list {
+    margin-bottom: 32px;
+  }
+
+  .card__button {
+    margin-top: 0;
+  }
+
+  .pricing-card.card--large {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 32px;
+    padding: 86px 16px;
+    max-width: 100%;
+  }
+
+  .card__price-block,
+  .card__features {
+    flex: 1;
+  }
+
+  .card__price-block {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .card__button.mobdesk-only {
+    display: none;
+  }
+
+  .card__button.tablet-only {
+    display: block;
+  }
 }
 
-@media screen and (min-width: 1336px){
+/* Десктопная версия */
+@media (min-width: 1336px) {
+  .pricing-section {
+    padding: 112px 0;
+  }
 
+  .subheading {
+    margin-bottom: 16px;
+  }
 
   .heading {
-    font-size: 52px;
     margin-bottom: 24px;
+    font-size: 52px;
   }
 
   .description {
-    margin-bottom: 24px;
-  } 
-
-  .pricing-container{
-    flex-direction: row;
-    flex-wrap: nowrap;
+    margin-bottom: 40px;
+    font-size: 18px;
   }
 
+  .pricing-container {
+    display: flex;
+    flex-direction: row;
+
+    align-items: start;
+    justify-content: center;
+    gap: 24px;
+  }
+
+  .pricing-card {
+    /* flex: 1 1 calc(33.333% - 16px) */
+    flex: 1;
+    min-width: 421px;
+    padding: 32px;
+    height: 509px;
+    gap: 32px;
+  }
+
+  .card__title {
+    font-size: 22px;
+  }
+
+  .card__price {
+    font-size: 72px;
+  }
+
+  .card__features {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+
+  .card__button {
+    margin-top: 0;
+  }
 }
-
-.ulthree {
-  margin-bottom: 32px;
-}
-
-
-.butonthre {
-  margin-top: 32px;
-}
-
-
-.pricing-container {
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-}
-
-.subheading {
-  margin-bottom: 16px;
-}
-
-
-.h3tit {
-  font-size: 22px;
-}
-
-.three80 {
-  width: 100%;
-}
-
-
-.thprice {
-  text-align: left;
-}
-
-.twopart {
-  text-align: left;
-}
-
-.price {
-  margin-bottom: 32px;
-  font-size: 72px;
-} 
