--- a/src/partials/section-pricing-plan.html
+++ b/src/partials/section-pricing-plan.html
@@ -12,9 +12,22 @@
         </div>
         <div class="card__features">
           <ul class="features-list">
-            <li class="liil">✓ 1 group session</li>
-            <li class="liil">✓ 10% discount for next 2 sessions</li>
-            <li class="liil">✓ Community support group</li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use>
+              </svg>
+              1 group session
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >10% discount for next 2 sessions
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >Community support group
+            </li>
           </ul>
           <button class="card__button" data-plan="One Session" data-price="$10">
             Join
@@ -29,9 +42,21 @@
         </div>
         <div class="card__features">
           <ul class="features-list">
-            <li class="liil">✓ 6 Group Sessions</li>
-            <li class="liil">✓ 2 Individual Sessions</li>
-            <li class="liil">✓ Community support group</li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >6 Group Sessions
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >2 Individual Sessions
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >Community support group
+            </li>
           </ul>
           <button
             class="card__button"
@@ -57,11 +82,31 @@
         </div>
         <div class="card__features">
           <ul class="features-list">
-            <li class="liil">✓ 8 Group Sessions</li>
-            <li class="liil">✓ 4 Individual Sessions</li>
-            <li class="liil">✓ Monthly yoga challenges</li>
-            <li class="liil">✓ Exclusive member discounts</li>
-            <li class="liil">✓ Community support group</li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >8 Group Sessions
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >4 Individual Sessions
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >Monthly yoga challenges
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >Exclusive member discounts
+            </li>
+            <li class="liil">
+              <svg class="card-chek-svg">
+                <use href="../img/sprite.svg#icon-chek"></use></svg
+              >Community support group
+            </li>
           </ul>
           <button
             class="card__button mobdesk-only"
