--- a/src/css/section-pricing-plan.css
+++ b/src/css/section-pricing-plan.css
@@ -33,7 +33,7 @@
   flex-direction: column;
   align-items: center;
   gap: 32px;
-  align-items: stretch;
+  align-items: center;
 }
 
 .pricing-card {
@@ -44,7 +44,6 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  max-width: 343px;
   width: 100%;
   min-height: 100%;
 }
@@ -74,6 +73,18 @@
   gap: 16px;
 }
 
+.card-chek-svg {
+  width: 24px;
+  height: 24px;
+  fill: #0d0b0a;
+  margin-right: 16px;
+  flex-shrink: 0;
+}
+
+.features-list {
+  margin-bottom: 32px;
+}
+
 .card__button {
   background-color: #c2d9fc;
   border: 0px solid rgba(13, 11, 10, 0.15);
@@ -85,14 +96,14 @@
   font-size: 16px;
   line-height: 1.6;
   width: 100%;
-  margin-top: 32px;
 }
 
 .card__button.tablet-only {
   display: none;
 }
 
-/* Планшетная версия */
+/* tablet*/
+
 @media (min-width: 768px) and (max-width: 1335px) {
   .pricing-section {
     padding: 40px 0;
@@ -121,7 +132,6 @@
 
   .pricing-card {
     flex: 1 1 calc(50% - 12px);
-    max-width: 340px;
     padding: 16px;
   }
 
@@ -131,14 +141,6 @@
 
   .card__price {
     font-size: 72px;
-  }
-
-  .features-list {
-    margin-bottom: 32px;
-  }
-
-  .card__button {
-    margin-top: 0;
   }
 
   .pricing-card.card--large {
@@ -157,6 +159,7 @@
   .card__price-block {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 24px;
   }
 
@@ -169,7 +172,8 @@
   }
 }
 
-/* Десктопная версия */
+/* desktop */
+
 @media (min-width: 1336px) {
   .pricing-section {
     padding: 112px 0;
@@ -192,18 +196,17 @@
   .pricing-container {
     display: flex;
     flex-direction: row;
-
-    align-items: start;
+    align-items: stretch;
     justify-content: center;
     gap: 24px;
   }
 
   .pricing-card {
-    /* flex: 1 1 calc(33.333% - 16px) */
+    flex: 1 1 calc(33.333% - 16px);
     flex: 1;
-    min-width: 421px;
+    flex-direction: column;
     padding: 32px;
-    height: 509px;
+    max-width: 100%;
     gap: 32px;
   }
 
@@ -220,9 +223,5 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-  }
-
-  .card__button {
-    margin-top: 0;
   }
 }
