--- a/src/partials/section-pricing-plan.html
+++ b/src/partials/section-pricing-plan.html
@@ -14,18 +14,18 @@
           <ul class="features-list">
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use>
+                <use href="/img/sprite.svg#icon-chek"></use>
               </svg>
               1 group session
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >10% discount for next 2 sessions
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >Community support group
             </li>
           </ul>
@@ -44,17 +44,17 @@
           <ul class="features-list">
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >6 Group Sessions
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >2 Individual Sessions
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >Community support group
             </li>
           </ul>
@@ -84,27 +84,27 @@
           <ul class="features-list">
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >8 Group Sessions
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >4 Individual Sessions
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >Monthly yoga challenges
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >Exclusive member discounts
             </li>
             <li class="liil">
               <svg class="card-chek-svg">
-                <use href="../img/sprite.svg#icon-chek"></use></svg
+                <use href="/img/sprite.svg#icon-chek"></use></svg
               >Community support group
             </li>
           </ul>
