--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,11 @@
     <div class="header-container-add">
       <nav class="header-navigation">
         <ul class="header-navigation-list">
-          <li class="navigation-list-item"></li>
+          <li class="navigation-list-item">
+            <a class="navigation-item-link current" href="#popular-programs"
+              >Yoga Classes</a
+            >
+          </li>
           <li class="navigation-list-item">
             <a class="navigation-item-link" href="#team">Team</a>
           </li>
