--- a/src/partials/section-popular-programs.html
+++ b/src/partials/section-popular-programs.html
@@ -1,4 +1,4 @@
-<section class="programs-section">
+<section class="programs-section" id="popular-programs">
   <div class="container programs-container">
     <span class="programs-span">Explore</span>
     <h2 class="programs-title">Discover Our Most Popular Yoga Programs</h2>
