--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <button type="button" class="closebutton" data-modal-close>
         <svg class="modal-close-svg">
-          <use href=""></use>
+          <use href="../img/sprite.svg#icon-close"></use>
         </svg>
       </button>
       <h2 class="modal-title">Join Now!</h2>
