--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="contacts">
   <div class="container">
     <div class="interior-div">
       <div class="div-total-information">
