--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -91,6 +91,6 @@
       </ul>
     </nav>
 
-    <a class="navbar-link-join" href="">Join</a>
+    <a class="navbar-link-join btn-blue-hover" href="">Join</a>
   </div>
 </div>
