--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -31,7 +31,7 @@
         <span class="break-1"> Transform Your Life</span>
         <span class="break-2"> with Our Yoga </span>
         <span class="word-mobile">Courses </span>
-        <span class="word-desktop">Clases </span>
+        <span class="word-desktop">Classes </span>
       </h1>
       <div class="hero-text-buttons">
         <p class="hero-description">
@@ -40,7 +40,7 @@
           growth.
         </p>
         <div class="hero-buttons">
-          <a href="#pricing" class="button join-button btn-blue-hover">
+          <a href="#pricing" class="button btn-blue-hover join-button">
             <span class="mobile-text">Join</span>
             <span class="desktop-text">Join Now</span>
           </a>
