--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,3 @@
-
 <footer class="footer" id="contacts">
   <div class="container">
     <div class="interior-div">
@@ -43,7 +42,7 @@
           <h3 class="header">Connect With Us</h3>
           <ul class="links-list">
             <li class="item-list-footer">
-              <a href="https://www.facebook.com/">
+              <a href="https://www.facebook.com/" target="_blank">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="/img/sprite.svg#icon-facebook" />
@@ -53,7 +52,7 @@
               </a>
             </li>
             <li class="item-list-footer">
-              <a href="https://www.instagram.com/">
+              <a href="https://www.instagram.com/" target="_blank">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="/img/sprite.svg#icon-instagram" />
@@ -63,7 +62,7 @@
               </a>
             </li>
             <li class="item-list-footer">
-              <a href="https://www.linkedin.com/">
+              <a href="https://www.linkedin.com/" target="_blank">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="/img/sprite.svg#icon-linkedin"></use>
@@ -73,7 +72,7 @@
               </a>
             </li>
             <li class="item-list-footer">
-              <a href="https://www.youtube.com/">
+              <a href="https://www.youtube.com/" target="_blank">
                 <div class="icon-div">
                   <svg width="20" height="20">
                     <use href="/img/sprite.svg#icon-youtube"></use>
