--- a/src/partials/section-breathe-space.html
+++ b/src/partials/section-breathe-space.html
@@ -1,4 +1,4 @@
-<section>
+<section id="gallery">
   <div class="container">
     <div class="section-four-container">
       <h2 class="section-four-title">Breathe in the Space</h2>
